<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageButton
            android:id="@+id/imageButtonVolver"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="?attr/actionModeCloseDrawable"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:layout_marginLeft="25dp"
            android:text="@string/dialog_add_txtTitulo" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/dialog_add_hint_nombre"
            />

        <EditText
            android:id="@+id/editTextSeries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/dialog_add_hint_series"
            android:inputType="numberSigned"
            />

        <EditText
            android:id="@+id/editTextRepeticiones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/dialog_add_hint_repeticiones"
            android:inputType="numberSigned"
            />

        <EditText
            android:id="@+id/editTextPeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/dialog_add_hint_peso"
            android:inputType="numberDecimal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonAgregar"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/buttonAñadir"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>