<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageButton
            android:id="@+id/imageButtonVolver"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:srcCompat="?attr/actionModeCloseDrawable"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-black"
            android:text="@string/dialog_change_txtTitulo"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:layout_marginLeft="25dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtNombre"
                android:layout_marginLeft="3dp"
                style="@style/Widget.AppCompat.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:text="@string/dialog_change_nombre" />

            <EditText
                android:id="@+id/editTextNombre"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtSeries"
                android:layout_marginLeft="3dp"
                style="@style/Widget.AppCompat.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:text="@string/dialog_change_series" />

            <EditText
                android:id="@+id/editTextSeries"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewRepeticiones"
                android:layout_marginLeft="3dp"
                style="@style/Widget.AppCompat.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:text="@string/dialog_change_repeticiones" />

            <EditText
                android:id="@+id/editTextRepeticiones"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberSigned" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtPeso"
                android:layout_marginLeft="3dp"
                style="@style/Widget.AppCompat.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16dp"
                android:text="@string/dialog_change_peso" />

            <EditText
                android:id="@+id/editTextPeso"
                android:textSize="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="right"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonBorrar"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:text="@string/buttonBorrar"
                android:backgroundTint="#8E2323"
                app:rippleColor="#8E2323"
                app:strokeColor="#BF2929" />

            <Button
                android:id="@+id/buttonModificar"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/buttonModificar" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>