<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="5dp">

    <LinearLayout
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="TextView"
            android:textAllCaps="true"
            android:textSize="13dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewRepeticiones1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lest_ejercicio_view_repeticiones"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/textViewRepeticiones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/textViewPeso1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:text="@string/lest_ejercicio_view_peso"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/textViewPeso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:textSize="12dp" />
        </LinearLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewSeries"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center|top"
            android:text="@string/lest_ejercicio_view_series"
            android:textAllCaps="true"
            android:textSize="13dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonSeries"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:textColor="@color/colorSecondary"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:fontFamily="sans-serif-black"
            android:gravity="bottom|center_horizontal"
            android:padding="0dp"
            android:text="4"
            android:textSize="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>